# claude-close-guard

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
ahk/: close_guard.ahk
claude_close_guard/: __init__.py  __main__.py  cli.py  close_handler.py  config.py  embedder.py  mcp_server.py  memory_store.py  summarizer.py  transcript.py  ui.py
powershell/: ccg-claude.cmd  ccg-claude.ps1  ccg-mcp.cmd  ccg.cmd
scripts/: dry_run.py  install.ps1  uninstall.ps1
tests/: test_memory_store.py  test_transcript.py
